# diploma

./: .env.example  .gitignore  README.md  compose.yaml
db/init/: 00_init_schema.sql
docker/ai_planner/: Dockerfile
docker/bridge/: Dockerfile
docker/collector/: Dockerfile
docker/frontend/: Dockerfile
docker/gateway/: Dockerfile
docker/gazebo/: Dockerfile  entrypoint.sh  iris_world.sdf  launch_iris.sh  model.sdf
docker/gazebo/launch/: turtlebot3.launch.py  world.world
docker/generator/: Dockerfile
docker/gzweb/: Dockerfile
docker/mission_bridge/: Dockerfile
docker/mission_mqtt_to_ros/: Dockerfile
docker/mode_writer/: Dockerfile
docker/obstacle_bridge/: Dockerfile
docker/rosbridge/: Dockerfile
docker/streamlit/: Dockerfile
docker/switch_logic/: Dockerfile
src/ai/: package.xml  setup.cfg  setup.py
src/ai/ai_planner/: ai_planner_node.py
src/backend/collector/: requirements.txt  telemetry_collector_service.py
src/backend/dashboard/: streamlit.py
src/backend/gateway/: gateway_fastapi.py  requirements.txt
src/backend/shared_control_switch/: package.xml  setup.cfg  setup.py
src/backend/shared_control_switch/shared_control_switch/: switch_logic_node.py
src/bridge/: package.xml  setup.cfg  setup.py
src/bridge/ros_mqtt_bridge/: ros_mqtt_bridge_node.py
src/control/: package.xml  setup.py
src/control/control/: ai_planner.py  switcher_node.py
src/docker/collector/: Dockerfile
src/docker/gateway/: Dockerfile
src/docker/switch_logic/: Dockerfile
src/frontend/: .env.example  package-lock.json  package.json
src/frontend/src/app/: layout.tsx  page.tsx
src/frontend/src/components/charts/: BatteryChart.tsx
src/frontend/src/components/map/: MapView.tsx  MiniMap.tsx
src/frontend/src/components/mini3d/: Drone.tsx
src/frontend/src/components/ui/: BatteryIndicator.tsx  ControlPanel.tsx  ManualPanel.tsx  ModeSwitch.tsx
src/frontend/src/hooks/: useTelemetry.ts
src/frontend/src/lib/: api.ts
src/frontend/src/types/: plotly.d.ts
src/generator/: telemetry_generator.py
src/infrastructure/: compose.yaml
src/mission/: package.xml  setup.cfg  setup.py
src/mission/ros_mission_bridge/: ros_mission_bridge_node.py
src/mission_to_ros/: package.xml  setup.cfg  setup.py
src/mission_to_ros/mission_mqtt_to_ros/: mission_mqtt_to_ros_node.py
src/mode/: mode_db_writer.py  requirements.txt
src/operator_ui/: package.xml
src/operator_ui_bridge/: package.xml  setup.py
src/operator_ui_bridge/operator_ui/: app.py
src/operator_ui_bridge/operator_ui/templates/: index.html
src/ros_obstacle/: ros_obstacle_bridge.py
src/sim/: CMakeLists.txt  package.xml
src/sim/config/: thruster_controller.yaml
src/sim/launch/: sim.launch.py
