[develop]
script_dir=$base/lib/ai_planner
[install]
install_scripts=$base/lib/ai_planner

[metadata]
name = ai_planner
version = 0.0.0
description = ai_planner
license = MIT

[options]
packages = find:
install_requires = setuptools
zip_safe = false

[options.entry_points]
console_scripts =
    ai_planner_node = ai_planner.ai_planner_node:main
