[develop]
script_dir=$base/lib/ros_mqtt_bridge
[install]
install_scripts=$base/lib/ros_mqtt_bridge

[metadata]
name = ros_mqtt_bridge
version = 0.0.0
description = bridge
license = MIT

[options]
packages = find:
install_requires = setuptools
zip_safe = false

[options.entry_points]
console_scripts =
    ros_mqtt_bridge_node = ros_mqtt_bridge.ros_mqtt_bridge_node:main
