<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros_mission_bridge</name>
  <version>0.0.0</version>
  <description>ROS odom → MQTT telemetry bridge</description>
  <maintainer email="fruktin03@mail.ru">A F</maintainer><license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>asyncio_mqtt</exec_depend>
  <export><build_type>ament_python</build_type></export>
</package>
