[develop]
script_dir=$base/lib/ros_mission_bridge
[install]
install_scripts=$base/lib/ros_mission_bridge

[metadata]
name = ros_mission_bridge
version = 0.0.0
description = bridge
license = MIT

[options]
packages = find:
install_requires = setuptools
zip_safe = false

[options.entry_points]
console_scripts =
    ros_mission_bridge_node = ros_mission_bridge.ros_mission_bridge_node:main
