[develop]
script_dir=$base/lib/mission_mqtt_to_ros
[install]
install_scripts=$base/lib/mission_mqtt_to_ros

[metadata]
name = mission_mqtt_to_ros
version = 0.0.0
description = bridge
license = MIT

[options]
packages = find:
install_requires = setuptools
zip_safe = false

[options.entry_points]
console_scripts =
    mission_mqtt_to_ros_node = mission_mqtt_to_ros.mission_mqtt_to_ros_node:main
