<?xml version="1.0"?>
<package format="3">
  <name>operator_ui</name>
  <version>0.0.0</version>
  <description>operator_ui package for ASV simulation demo.</description>
  <maintainer email="fruktin03@gmail.com">Student</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>
  <build_type>ament_python</build_type>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>

  <export>
  </export>
</package>