[develop]
script_dir=$base/lib/shared_control_switch
[install]
install_scripts=$base/lib/shared_control_switch

[metadata]
name = shared_control_switch
version = 0.0.0
description = Switch-logic node for Shared Control UAV
license = MIT

[options]
packages = find:
install_requires = setuptools
zip_safe = false

[options.entry_points]
console_scripts =
    switch_logic = shared_control_switch.switch_logic_node:main
